@@ -77,7 +77,6 @@ esd_SOURCES = 	\
 	players.c	\
 	proto.c		\
 	samples.c	\
-	session.c	\
 	esd-server.h
 
 esdcat_SOURCES = \
