@@ -248,35 +248,6 @@ int deny_severity = LOG_WARNING;],
    LIBS="$esound_save_LIBS"
 fi
 
-dnl session management checks
-AC_ARG_ENABLE(sm,[  --enable-sm             support session management [default=yes]], [HAVE_SM="$enableval"], [HAVE_SM=true])
-
-if test "$HAVE_SM" = true; then
-dnl Find the X11 include and library directories
-AC_PATH_X
-AC_PATH_XTRA
-
-if test "x$x_includes" = "x"; then
-  x_includes="/usr/include"
-fi
-
-
-LDFLAGS="$LDFLAGS $X_LDFLAGS $X_LIBS"
-
-if test "x$no_x" = "xyes"; then 
-  HAVE_SM=false
-fi
-fi
-
-if test "$HAVE_SM" = true; then
-   AC_CHECK_LIB(SM, SmcSaveYourselfDone,
-      [LIBS="-lSM -lICE $LIBS"],[HAVE_SM=false],[$x_libs -lICE])
-fi
-
-if test "$HAVE_SM" = true; then
-   AC_CHECK_HEADERS(X11/SM/SMlib.h,,[HAVE_SM=false])
-fi
-
 dnl build the esddsp wrapper for Linux/FreeBSD only
 dsp_ok=no ESDDSP= LIBESDDSP= DL_LIB=
 
