@@ -1,3 +1,7 @@
+1999-02-01  Elliot Lee  <sopwith@redhat.com>
+
+	* Revert session management changes until further discussion.
+
 Mon Feb  1 01:24:43 PST 1999 Manish Singh <yosh@gimp.org>
 
 	* esddsp.c: stupid interim hack for SNDCTL_DSP_GETOSPACE so x11amp 0.9a
